--- a/style.css
+++ b/style.css
@@ -72,7 +72,6 @@ body {
     border-radius: 50%;
     background: #fff var(--switch-button-icon) no-repeat 50% 50%;
     border: none;
-    outline: none;
     position: absolute;
     left: 0;
     cursor: pointer;
@@ -94,6 +93,10 @@ body {
     -webkit-backdrop-filter: blur(4px);
     border-radius: 9999px;
     z-index: -1;
+}
+
+#switch button:active {
+    outline: 8px solid var(--hover-icon);
 }
 
 ul {
